--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The cse_190_assi_1 package</description>
 
-  <maintainer email="sean@todo.todo">sean</maintainer>
+  <!-- <maintainer email="sean@todo.todo">sean</maintainer> -->
 
 
   <license>TODO</license>
