--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,9 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate services in the 'srv' folder
  add_service_files(
    FILES
+   moveService.srv
+   tempSensorService.srv
+   texSensorService.srv
  )
 
 ## Generate actions in the 'action' folder
