reworking the service model, map_server.py and temperature_sensor.py are finished

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  message_generation
 )
 
 ## System dependencies are found with CMake's conventions
@@ -46,14 +47,14 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
  add_message_files(
    FILES
+   temperatureMessage.msg
  )
 
 ## Generate services in the 'srv' folder
  add_service_files(
    FILES
    moveService.srv
-   tempSensorService.srv
-   texSensorService.srv
+   requestMapData.srv
  )
 
 ## Generate actions in the 'action' folder
