There is ice cream and I have lost my will to program. A basic framework sufficient for testing the autograder is now working, still need to test the ability to move the robot, but it should work. Only thing left to implement is the actual localization.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ find_package(catkin REQUIRED COMPONENTS
    FILES
    moveService.srv
    requestMapData.srv
+   requestTexture.srv
  )
 
 ## Generate actions in the 'action' folder
