--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <package>
-  <name>cse_190_assi_1</name>
+  <name>cse_190_assi_2</name>
   <version>0.0.0</version>
-  <description>The cse_190_assi_1 package</description>
+  <description>The cse_190_assi_2 package</description>
 
-  <maintainer email="sean@todo.todo">sean</maintainer>
+  <maintainer email="srsivara@todo.todo">SAKTHI</maintainer>
 
 
   <license>TODO</license>
