--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,19 +47,19 @@ set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
- add_message_files(
-   FILES
-   temperatureMessage.msg
-   RobotProbabilities.msg
- )
+# add_message_files(
+#   FILES
+#   temperatureMessage.msg
+#   RobotProbabilities.msg
+# )
 
 ## Generate services in the 'srv' folder
- add_service_files(
-   FILES
-   moveService.srv
-   requestMapData.srv
-   requestTexture.srv
- )
+# add_service_files(
+#   FILES
+#   moveService.srv
+#   requestMapData.srv
+#   requestTexture.srv
+# )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
