QOL changes and bugfixes

--- a/scripts/configuration.json
+++ b/scripts/configuration.json
@@ -17,7 +17,20 @@
         [1,0],
         [1,0],
         [0,1],
-        [0,1]
+        [0,1],
+        [-1,0],
+        [-1,0],
+        [0,0],
+        [0,-1],
+        [0,0],
+        [1,0]
+    ],
+    "possible_moves": [
+        [0,0],
+        [0,1],
+        [0,-1],
+        [1,0],
+        [-1,0]
     ],
     "starting_pos": [3,3],
     "temp_noise_std_dev": 10,
