--- a/scripts/configuration.json
+++ b/scripts/configuration.json
@@ -17,8 +17,21 @@
         [1,0],
         [1,0],
         [0,1],
-        [0,1]
-    ],
+        [0,1],
+        [-1,0],
+        [-1,0],
+        [0,0],
+        [0,-1],
+        [0,0],
+        [1,0]
+    ],  
+    "possible_moves": [
+        [0,0],
+        [0,1],
+        [0,-1],
+        [1,0],
+        [-1,0]
+    ], 
     "starting_pos": [3,3],
     "temp_noise_std_dev": 10,
     "prob_tex_correct": 0.99,
