--- a/scripts/configuration.json
+++ b/scripts/configuration.json
@@ -1,17 +1,37 @@
 {
-  "start": [10, 10],
-  "goal": [145, 145],
-
   "move_list": [
     [0, 1],
     [0, -1],
     [1, 0],
     [-1, 0]
   ],
-  "path_to_world_map": "world.png",
+  "map_size": [10, 10],
+  "start": [2, 0],
+  "goal": [6, 9],
+  "walls": [
+    [0, 0], [0, 1], [0, 2], [0, 3], [0, 4], [0, 5], [0, 6], [0, 7], [0, 8], [0, 9],
+    [1, 0], [1, 9],
+    [2, 9],
+    [3, 0], [3, 4], [3, 9],
+    [4, 0], [4, 4], [4, 5], [4, 7], [4, 9],
+    [5, 0], [5, 4], [5, 9],
+    [6, 0],
+    [7, 0], [7, 4], [7, 9],
+    [8, 0], [8, 9],
+    [9, 0], [9, 1], [9, 2], [9, 3], [9, 4], [9, 5], [9, 6], [9, 7], [9, 8], [9, 9]
+  ],
+  "pits": [
+    [1, 5],
+    [1, 7],
+    [3, 5],
+    [3, 7],
+    [5, 5],
+    [5, 7]
+  ],
 
-  "reward_for_each_step": -0.00,
-  "reward_for_hitting_wall": -0.05,
+
+  "reward_for_each_step": -0.04,
+  "reward_for_hitting_wall": -1.0,
   "reward_for_reaching_goal": 1.0,
   "reward_for_falling_in_pit": -1.0,
 
@@ -20,65 +40,5 @@
   "prob_move_forward": 0.925,
   "prob_move_backward": 0.025,
   "prob_move_left": 0.025,
-  "prob_move_right": 0.025,
-
-  "mdp_grid_size": [9, 9],
-  "mdp_goal": [6, 8],
-  "mdp_walls": [
-    [0, 0],
-    [0, 1],
-    [0, 2],
-    [0, 3],
-    [0, 4],
-    [0, 5],
-    [0, 6],
-    [0, 7],
-    [0, 8],
-
-    [1, 0],
-    [1, 8],
-
-    [2, 8],
-
-    [3, 0],
-    [3, 4],
-    [3, 8],
-
-    [4, 0],
-
-    [4, 4],
-    [4, 5],
-    [4, 7],
-    [4, 8],
-
-    [5, 0],
-
-    [5, 4],
-    [5, 8],
-
-    [6, 0],
-
-    [7, 0],
-    [7, 4],
-
-    [8, 0],
-    [8, 1],
-    [8, 2],
-    [8, 3],
-    [8, 4],
-    [8, 5],
-    [8, 6],
-    [8, 7],
-    [8, 8]
-
-
-  ],
-  "mdp_pits": [
-    [1, 5],
-    [1, 7],
-    [3, 5],
-    [3, 7],
-    [5, 5],
-    [5, 7]
-  ]
+  "prob_move_right": 0.025
 }
