--- a/scripts/configuration.json
+++ b/scripts/configuration.json
@@ -31,7 +31,7 @@
 
 
   "reward_for_each_step": -0.04,
-  "reward_for_hitting_wall": -1.0,
+  "reward_for_hitting_wall": -0.5,
   "reward_for_reaching_goal": 1.0,
   "reward_for_falling_in_pit": -1.0,
 
@@ -40,5 +40,7 @@
   "prob_move_forward": 0.925,
   "prob_move_backward": 0.025,
   "prob_move_left": 0.025,
-  "prob_move_right": 0.025
+  "prob_move_right": 0.025,
+
+  "generate_video": 1
 }
