--- a/scripts/configuration_2_10_10_1.json
+++ b/scripts/configuration_2_10_10_1.json
@@ -29,18 +29,21 @@
     [5, 7]
   ],
 
+  "max_iterations": 1000,
+  "threshold_difference": 0.00001,
 
-  "reward_for_each_step": -0.04,
-  "reward_for_hitting_wall": -0.5,
-  "reward_for_reaching_goal": 1.0,
-  "reward_for_falling_in_pit": -1.0,
+
+  "reward_for_each_step": -0.05,
+  "reward_for_hitting_wall": -0.00,
+  "reward_for_reaching_goal": 5.0,
+  "reward_for_falling_in_pit": -5.0,
 
   "discount_factor": 0.99,
 
-  "prob_move_forward": 0.925,
-  "prob_move_backward": 0.025,
-  "prob_move_left": 0.025,
-  "prob_move_right": 0.025,
+  "prob_move_forward": 0.8,
+  "prob_move_backward": 0.0,
+  "prob_move_left": 0.1,
+  "prob_move_right": 0.1,
 
   "generate_video": 1
 }
